# HPML_NanoChat

./: pyproject.toml
checkpoints/A_baseline/: config.json  train_log.csv
checkpoints/B_workers8/: config.json  train_log.csv
checkpoints/C_pin_memory/: config.json  train_log.csv
checkpoints/D_persistent_workers/: config.json  train_log.csv
checkpoints/E_prefetch/: config.json  train_log.csv
checkpoints/F_non_blocking/: config.json  train_log.csv
checkpoints/G_amp_fp16/: config.json  train_log.csv
checkpoints/H_amp_bf16/: config.json  train_log.csv
checkpoints/opt_all/: config.json  metrics.json  scheduler.pt  train_log.csv
nanochat/: evaluate_captioning.py  gpt.py  plot_results.py
nanochat/vision/: benchmark_vision.py  coco_dataset.py  cross_attention.py  nanochat_vision_model.py  profile_vision.py  train_vision.py
nanochat/vision/tests/: test_gpt_compat.py
results/: benchmark_summary.csv  benchmark_summary.json  component_timing.json  dataloader_sweep.json  eval_results.json  inference_summary.csv  inference_summary.json  val_log.csv
results/profiling/: dataloader_sweep.csv
scripts/: download_coco.sh  experiment_flags.py  run_experiments.sh  run_remaining.sh  smoke_test.sh
